<resources>
    <string name="app_name">सह-yoG</string>

    <string name="nav_bottom_home">Home</string>
    <string name="nav_bottom_search">Search</string>
    <string name="nav_bottom_add">Add</string>
    <string name="nav_bottom_booking">Updates</string>
    <string name="nav_bottom_profile">Profile</string>
    <string name="offer"><![CDATA[Offer & Promos]]></string>
    <string name="typeOffer">(OFFER)</string>
    <string name="offersPost">Offers</string>
    <string name="typeProblem">(PROBLEM)</string>
    <string name="problems">Problems</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search Services</string>
    <string name="urgent">Response</string>
    <string name="services_available">Available Services</string>
    <string name="recommended_services">Recommendations</string>
    <string name="recent_search">Recent Search</string>
    <string name="notification">Alerts</string>
    <string name="qr_code">Qr Code</string>
    <!--Profile related strings-->
    <string name="profile_tab_one">Details</string>
    <string name="profile_tab_two">About</string>
    <string name="profile_tab_three">Posts</string>
    <string name="profile_tab_four">Reviews</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_delete">DELETE</string>
    <string name="about"><u>About</u></string>
    <string name="skills"><u>Skills</u></string>
    <string name="working_rate"><u>Work Ratio</u></string>
    <string name="completed_projects">Completed Projects</string>
    <string name="on_budge">On Budge Rates</string>
    <string name="on_time">On Time Rates</string>
    <string name="repeat_hire">Repeat Hire Rate</string>
    <string name="my_profile">My Profile</string>
    <string name="setting">Setting</string>
    <string name="previous_bookings">Previous Bookings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_roof_care">About Roof Care</string>
    <string name="share_roof_care">Share Roof Care</string>
    <string name="log_out">Log Out</string>
    <string name="communicate">Communicate</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="message">Message</string>
    <string name="favorite">Favorite</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="recommendations">Recommendations</string>
    <string name="mobile">Mobile</string>
    <string name="phone">Phone</string>
    <string name="personal_email">Personal email</string>
    <string name="work_email">Work email</string>
    <string name="office_address">Office Address</string>
    <string name="valid_till">Valid Till: </string>
    <string name="valid_now">Valid Now</string>
    <string name="valid">Valid</string>
    <string name="expired">Expired</string>
    <string name="what_happenning">What\'s Happening?</string>
    <string name="post">POST</string>
    <string name="filter_posts">Filter Posts</string>
    <string name="about_offer">About Offer</string>
    <string name="upload_image">Upload Image</string>
    <string name="my_favorites">My Favorites</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="post_details">Post Details</string>
    <string name="messages">Chats</string>
    <string name="bookings">Booked</string>
    <string name="my_qr_code">My Qr-Code</string>
    <string name="scan_on_scanner">Scan on Scanner</string>
    <string name="all">All</string>
    <string name="positive">Positive</string>
    <string name="two_star">Two Star</string>
    <string name="three_star">Three Star</string>
    <string name="one_star">One Star</string>
    <string name="four_star">Four Star</string>
    <string name="five_star">Five Star</string>
    <string name="critical">Critical</string>
    <string name="add_review">Add Review</string>
    <string name="try_again">Try Again..</string>
    <string name="all_searches">All</string>
    <string name="person_searches">Persons</string>
    <string name="institute_searches">Institute</string>
    <string name="new_service_providers">New Service Providers</string>
    <string name="top_service_providers">Top Service Providers</string>
    <string name="cities">Cities</string>
    <string name="send_number">Send Number</string>
    <string name="or">OR</string>
    <string name="sign_in"><u>Sign in!</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="register">REGISTER</string>
    <string name="sign_in_two">SIGN IN</string>
    <string name="don_t_have">Don\'t have an Account?</string>
    <string name="register_now"><u>Register now!</u></string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="only_offers">Show Only Offers</string>
    <string name="only_problems">Show Only Problems</string>
    <string name="all_posts">Show All Posts</string>
    <string name="select_language">Select Language</string>
    <string name="search_here_one">Search here for services and specialists…</string>
    <string name="select_to_call">Select to call</string>
    <string name="change_language_here">Select to change language.</string>
    <string name="post_problems">Post Problem</string>
    <string name="post_offer">Post Offer</string>
    <string name="remove_image">Remove Image</string>
    <string name="roof_care_setting_up">Roof Care Setting Up…</string>
    <string name="please_wait_while_posting">Please wait while posting…</string>
    <string name="we_are_at">We are at,</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="please_enter_otp">Please enter one time password to verify your phone number</string>
    <string name="a_one_time_sent">A One-Time Password has been sent to</string>
    <string name="resend_one_time_password">Resend One-Time Password</string>
    <string name="entered_a_wrong_number"><u>Entered a wrong number?</u></string>
    <string name="which_best_describes_you">Which best describes you?</string>
    <string name="service_user">Service User</string>
    <string name="service_giver">Service Giver</string>
    <string name="service_giver_are">Service giver are those who are here to work, provide to services to customers.</string>
    <string name="service_users_can">Service users can use different available services and post problems.</string>
    <string name="please_fill_up_the_form_below">Please fill up the form below.</string>
    <string name="full_name">Full Name*</string>
    <string name="email_id">Email Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="back"><![CDATA[Back]]></string>
    <string name="select_district">Select District*</string>
    <string name="precise_location">Precise Location</string>
    <string name="next_details"><![CDATA[Next]]></string>
    <string name="create_account">Create Account</string>
    <string name="camera">Add Photo</string>
    <string name="edit_your_details">Edit your details</string>
    <string name="save">SAVE</string>
    <string name="change_password">Change Password</string>
    <string name="addresses">Addresses</string>
    <string name="contact">Contacts</string>
    <string name="loading">Loading…</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="switch_account">Switch Account</string>
    <string name="book">Book</string>
    <string name="previous"><![CDATA[Previous]]></string>
    <string name="booking_requests">Request</string>
    <string name="booking_details">Booking Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="service_charge">Service Charge</string>
    <string name="discount">Discount %</string>
    <string name="traveling_cost">Traveling Cost</string>
    <string name="check_total">Total</string>
    <string name="saved_offers">Saved Offers</string>
    <string name="change_image">Change Image</string>
    <string name="old_password">Old Password</string>
    <string name="invalid_password">Invalid password or username!</string>

    <string-array name="post_types">
        <item>Post Problem</item>
        <item>Post Offer</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="address_type">
        <item>Address Type</item>
        <item>Home</item>
        <item>Office</item>
        <item>Other</item>
    </string-array>
</resources>
