<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_bottom_home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_bottom_search" />

    <item
        android:id="@+id/space"
        android:title="" />
    <item
        android:id="@+id/bookings"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/nav_bottom_booking" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />
</menu>