<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/a_one_time_sent"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/please_enter_otp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="16sp"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineColor="@color/colorPrimary"
            app:viewType="rectangle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/verifyUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/verify_pin"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/loadingAnimation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/loading_animation"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/resendPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/resend_one_time_password"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wrongNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/entered_a_wrong_number"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>